tests/paczka1/small_fuzzy/65500097.err
Error in line 2: A45 A519 74,7
Error in line 6: OCyOO S646 21,0
